# rudiff

./: .rudiff.toml  Cargo.toml  README.md
src/: app.rs  cli.rs  commit.rs  config.rs  explain.rs  group.rs  main.rs  syntax.rs  term.rs  theme.rs  util.rs  viewed.rs
src/git/: diff.rs  mod.rs  model.rs
src/ui/: commit.rs  commits.rs  diffview.rs  explain.rs  help.rs  markdown.rs  mod.rs  overview.rs  widgets.rs
