[package]
name = "rudiff"
version = "0.1.0"
edition = "2024"
description = "A fast, read-only terminal viewer for git diffs, built for PR-style review."

# Performance is a feature (see HANDOFF.md): tune the release build for runtime
# speed at the cost of compile time.
[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
gix = "0.83.0"
globset = "0.4.18"
ratatui = "0.30.0"
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
similar = { version = "3.1.1", features = ["unicode"] }
toml = "1.1.2"
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-highlight = "0.26.9"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
unicode-width = "0.2.2"
